tests/NormalTests/paczka1/fuzzy1/30513225.err
Error in line 1: e1cZ9dzS4k A954 59,2
Error in line 3: A449 S865 61,4
Error in line 12: e1cZ9dzS4kS27141,7
Error in line 10: e1cZ9dzS4k S271 57,8
Error in line 11: A449 A954 69,7
Error in line 16: YUmrkkm S865 15,9
Error in line 13: e1cZ9dzS4k A449 93,7
Error in line 15: 06Uxy A449 46,1
Error in line 21: 06Uxy S271 51,4
Error in line 31: 5Pk A449 -2,8
Error in line 33: dwnycgQ5SY S271 32,7
